; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/extr_ec.c_acpi_ec_write_cmd.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/extr_ec.c_acpi_ec_write_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_ec = type { i32, i32 }

@.str = private unnamed_addr constant [19 x i8] c"EC_SC(W) = 0x%2.2x\00", align 1
@jiffies = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.acpi_ec*, i32)* @acpi_ec_write_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @acpi_ec_write_cmd(%struct.acpi_ec* %0, i32 %1) #0 {
  %3 = alloca %struct.acpi_ec*, align 8
  %4 = alloca i32, align 4
  store %struct.acpi_ec* %0, %struct.acpi_ec** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @ec_dbg_raw(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.acpi_ec*, %struct.acpi_ec** %3, align 8
  %9 = getelementptr inbounds %struct.acpi_ec, %struct.acpi_ec* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @outb(i32 %7, i32 %10)
  %12 = load i32, i32* @jiffies, align 4
  %13 = load %struct.acpi_ec*, %struct.acpi_ec** %3, align 8
  %14 = getelementptr inbounds %struct.acpi_ec, %struct.acpi_ec* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  ret void
}

declare dso_local i32 @ec_dbg_raw(i8*, i32) #1

declare dso_local i32 @outb(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
